updating the notes from the class

--- a/Sydney Coding/Day-6/formatting.html
+++ b/Sydney Coding/Day-6/formatting.html
@@ -32,10 +32,13 @@
         </span>
     </h1>
 
-    <p class="font-examp"> This is an example of custom font and size. </p>
+    <p class="font-examp"> This is an example of custom
+        <span class="material-symbols-outlined">import_contacts</span> font and size. 
+    </p>
     <br />
     <p class="format-examp"> This is an <span class="bold"> example</span> of 
-        <span class="italic"> formatted </span> <span class="underline">text. </span>
+        <span class="italic"> formatted </span>
+        <span class="underline">text. </span>
     </p>
     <br />
     <p class="alignment-examp"> This is an example of text alignment. </p>
@@ -49,10 +52,13 @@
     <p class="import-font-examp"> This is an example of an import font. </p>
 
     <video width="200px" height="200px" autoplay muted>
-        <source src="samplevideo.mp4" type="video/mp4"> Sample Video
+        <source src="samplevid.mp4" type="video/mp4"> Sample Video
+    </video>
 
     <audio controls autoplay muted>
-        <source src="sampleaudio.mp3" type="audio/mpeg"> Sample Audio
+        <source src="sample-audio.mp3" type="audio/mpeg">
     </audio>
-</body> 
+
+</body>
+
 </html>
