--- a/Sydney Coding/Day-6/index.html
+++ b/Sydney Coding/Day-6/index.html
@@ -10,6 +10,14 @@
     </head>
 
     <body>
+    <!-- 
+        Box Sizing -- controls how the width and height of an element are calculated.
+​
+            * content-box value -- default value; the width and height specified in the CSS will only apply to the content area, 
+            and padding and border will add to the total size.
+​
+            * border-box value -- considers the content, padding, and border when calculating the width and height.
+     -->
 
         <h1> Box-Sizing Example</h1>
         <div class="content-box"> This is the Content Box</div>
@@ -20,4 +28,5 @@
         <br/>
         <div class="box-border-box">Content 2</div>
     </body>
+    
 </html>
