--- a/Sydney Coding/Day-5/external-css.html
+++ b/Sydney Coding/Day-5/external-css.html
@@ -3,6 +3,12 @@
         <title>EXTERNAL CSS</title>
         <!-- External CSS -->
         <link rel="stylesheet" href="style.css"> 
+
+        <style>
+            p {
+                color: orange;
+            }
+          </style>
     </head>
 
     <body>
