--- a/Sydney Coding/Day-6/display.html
+++ b/Sydney Coding/Day-6/display.html
@@ -4,13 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width, initial-scale1.0">
         <title>Display Property</title>
-
         <link rel="stylesheet" href="display.css">
     </head>
 
     <body>
-        <!-- Display property controls how the element is displayed
-         or rendered on the page or screen -->
+        <!-- Display property controls how the element is displayed or rendered on the page or screen -->
         
         <!-- 
             Block -- default setting; takes up full width of the container and start on a new line
@@ -31,5 +29,6 @@
         <div class="inline-block"> This is an Inline Block Element</div>
         <br/>
         <!-- <div class="none"> This is a None Element</div> -->
+        
     </body>
 </html>
